JavaScript/Calculator/Calculator.css
* {
    box-sizing: border-box;
    font-family: monospace;
}

.calculator-container{
    width: 450px;
    height: 600px;
    background-color: rgb(42,40,35);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.calculator-input{
    width: 100%;
    height: 90px;
    background-color: rgb(42,40,35);
    border: none;
    font-size: 40px;
    color: rgb(233, 233, 233);
    text-align: right;
    margin-right: 15px;
}

.calculator-input:focus{
    outline: none;
}

.number-button{
    width: 25%;
}

.op-button{
    width: 25%;
    background-color: rgb(234, 144, 41);
    color: rgb(253, 238, 222);
}

.op-button:hover{
    width: 25%;
    background-color: rgb(252, 172, 80);
}

.clear-button{
    width: 50%;
}

.delete-button{
    width: 25%;
}

.zero-button{
    width: 75%;
}

button{
    border: 1.5px solid rgb(42,40,35);
    height: 110px;
    font-size: 35px;
}

.clear-button,.delete-button,.number-button{
    background-color: rgb(216,217,219);
}

.clear-button:hover,.delete-button:hover,.number-button:hover{
    background-color: rgb(232, 235, 237);
}

